apps/gitlab/gitlab/gitlab/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: gitlab-shell
  namespace: gitlab
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway-system
      sectionName: internal-ssh
  rules:
    - backendRefs:
        - name: gitlab-gitlab-shell
          port: 22
