apps/gitlab/gitlab/gitlab/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-shell
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app: gitlab-shell
      release: gitlab
  ingress:
    - fromCIDR:
        - ${LAN_NETWORK_RANGE_V4}
        - ${LAN_NETWORK_RANGE_V6}
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
    - fromEntities:
        - cluster
